creating entity person

--- a/RestWithAspNetUdemy/RestWithAspNetUdemy/appsettings.json
+++ b/RestWithAspNetUdemy/RestWithAspNetUdemy/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "db_rest_with_azure": "Server=NBQSP-FC3173;Database=rest_with_azure;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
