--- a/RestWithAspNetUdemy/RestWithAspNetUdemy/RestWithAspNetUdemy.csproj
+++ b/RestWithAspNetUdemy/RestWithAspNetUdemy/RestWithAspNetUdemy.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Evolve" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.6" />
